battle test to string